WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44760
Calls to IndexedDB methods from V8Proxy::didLeaveScriptContext() are missing enable guards
https://bugs.webkit.org/show_bug.cgi?id=44760
Summary
Calls to IndexedDB methods from V8Proxy::didLeaveScriptContext() are missing ...
Steve Block
Reported
2010-08-27 04:46:37 PDT
This was introduced in
http://trac.webkit.org/changeset/65670/trunk/WebCore/bindings/v8/V8Proxy.cpp
Attachments
Patch
(1.69 KB, patch)
2010-08-27 04:54 PDT
,
Steve Block
jorlow
: review+
jorlow
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-08-27 04:54:08 PDT
Created
attachment 65699
[details]
Patch
Jeremy Orlow
Comment 2
2010-08-27 04:56:56 PDT
Comment on
attachment 65699
[details]
Patch Sorry!
Steve Block
Comment 3
2010-08-27 05:25:49 PDT
Committed
r66211
: <
http://trac.webkit.org/changeset/66211
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug