2010-08-27  Steve Block  <steveblock@google.com>

Reviewed by Jeremy Orlow.

        Calls to IndexedDB methods from V8Proxy::didLeaveScriptContext() are missing enable guards
        https://bugs.webkit.org/show_bug.cgi?id=44760

        No new tests, build fix only.

        * bindings/v8/V8Proxy.cpp:
        (WebCore::V8Proxy::didLeaveScriptContext):


Canonical link: https://commits.webkit.org/56983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66211 268f45cc-cd09-0410-ab3c-d52691b4dbfc