WebCore/bindings/v8/V8Proxy.cpp
@@ -648,6 +648,7 @@ void V8Proxy::didLeaveScriptContext()
     Page* page = m_frame->page();
     if (!page)
         return;
+#if ENABLE(INDEXED_DATABASE)
     // If we've just left a script context and indexed database has been
     // instantiated, we must let its transaction coordinator know so it can terminate
     // any not-yet-started transactions.
@@ -656,6 +657,7 @@ void V8Proxy::didLeaveScriptContext()
         page->group().idbFactory()->abortPendingTransactions(IDBPendingTransactionMonitor::pendingTransactions());
         IDBPendingTransactionMonitor::clearPendingTransactions();
     }
+#endif // ENABLE(INDEXED_DATABASE)
     // If we've just left a top level script context and local storage has been
     // instantiated, we must ensure that any storage locks have been freed.
     // Per http://dev.w3.org/html5/spec/Overview.html#storage-mutex
